# internal/model/base.go
@@ -1,0 +1,8 @@
+package model
+
+import "time"
+
+type baseModel struct {
+	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
+	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+}
