# internal/model/migrate.go
@@ -5,7 +5,7 @@ import (
 )
 
 func RunMigrations(db *gorm.DB) error {
-	models := []any{User{}, VerificationCode{}}
+	models := []any{User{}, VerificationCode{}, Business{}, Product{}, ProductImage{}, CartItem{}, Order{}, OrderItem{}, UserToBusiness{}}
 
 	for _, m := range models {
 		if err := db.AutoMigrate(&m); err != nil {
